--- a/src/app/main/list/list.component.html
+++ b/src/app/main/list/list.component.html
@@ -6,10 +6,26 @@
                     <table class="table table-striped">
                         <thead>
                             <tr>
-                                <th scope="col" class="text-left">Id</th>
-                                <th scope="col" class="text-left">Year</th>
-                                <th scope="col" class="text-left">Title</th>
-                                <th scope="col" class="text-left">Winner?</th>
+                                <th scope="col" class="col-md-3 text-center">Id<br><br></th>
+                                <th scope="col" class="col-md-3 text-center">Year
+                                    <form>
+                                        <div class="col-xs-3 col-sm-auto">
+                                            <input class="form-control" type="text" (input)="onSearch($event.target.value)" placeholder="Search by year">
+                                        </div>
+                                    </form>
+                                </th>
+                                <th scope="col" class="col-md-3 text-center">Title<br><br></th>
+                                <th scope="col" class="col-md-3 text-center">Winner?
+                                    <form>
+                                        <div class="col-xs-3 col-sm-auto">
+                                            <select name="wiiner" class="form-control" [(ngModel)]="winner" (input)="onWinner($event.target.value)">
+                                                <option [ngValue]=false>No</option>
+                                                <option [ngValue]=true>Yes</option>
+                                                <option></option>
+                                              </select>
+                                        </div>
+                                    </form>
+                                </th>
                             </tr>
                         </thead>
                         <tbody>
@@ -26,12 +42,6 @@
                     <ngb-pagination [collectionSize]="collectionSize" [(page)]="page" [pageSize]="size"
                         (pageChange)="refreshMovies()">
                     </ngb-pagination>
-                    <select class="form-select" style="width: auto" [(ngModel)]="size"
-                        (ngModelChange)="refreshMovies()">
-                        <option [ngValue]="2">2 items per page</option>
-                        <option [ngValue]="4">4 items per page</option>
-                        <option [ngValue]="6">6 items per page</option>
-                    </select>
                 </div>
             </div>
         </div>
