--- a/src/app/main/dashboard/dashboard.component.html
+++ b/src/app/main/dashboard/dashboard.component.html
@@ -7,7 +7,7 @@
                     <table class="table table-striped">
                         <thead>
                             <tr>
-                                <th scope="col" class="text-left">Year</th>
+                                <th scope="col" class="text-left col-md-6">Year</th>
                                 <th scope="col" class="text-left">Win Count</th>
                             </tr>
                         </thead>
@@ -28,7 +28,7 @@
                     <table class="table table-striped">
                         <thead>
                             <tr>
-                                <th scope="col" class="text-left">Name</th>
+                                <th scope="col" class="text-left col-md-6">Name</th>
                                 <th scope="col" class="text-left">Win Count</th>
                             </tr>
                         </thead>
@@ -53,10 +53,10 @@
                     <table class="table table-striped">
                         <thead>
                             <tr>
-                                <th scope="col" class="text-left">Producer</th>
-                                <th scope="col" class="text-left">Interval</th>
-                                <th scope="col" class="text-left">Previous Year</th>
-                                <th scope="col" class="text-left">following Year</th>
+                                <th scope="col" class="text-left col-md-3">Producer</th>
+                                <th scope="col" class="text-left col-md-3">Interval</th>
+                                <th scope="col" class="text-left col-md-3">Previous Year</th>
+                                <th scope="col" class="text-left col-md-3">following Year</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -75,10 +75,10 @@
                     <table class="table table-striped">
                         <thead>
                             <tr>
-                                <th scope="col" class="text-left">Producer</th>
-                                <th scope="col" class="text-left">Interval</th>
-                                <th scope="col" class="text-left">Previous Year</th>
-                                <th scope="col" class="text-left">following Year</th>
+                                <th scope="col" class="text-left col-md-3">Producer</th>
+                                <th scope="col" class="text-left col-md-3">Interval</th>
+                                <th scope="col" class="text-left col-md-3">Previous Year</th>
+                                <th scope="col" class="text-left col-md-3">following Year</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -110,9 +110,9 @@
                     <table class="table table-striped">
                         <thead>
                             <tr>
-                                <th scope="col" class="text-left">Id</th>
-                                <th scope="col" class="text-left">Year</th>
-                                <th scope="col" class="text-left">Title</th>
+                                <th scope="col" class="text-left col-md-3">Id</th>
+                                <th scope="col" class="text-left col-md-3">Year</th>
+                                <th scope="col" class="text-left col-md-6">Title</th>
                             </tr>
                         </thead>
                         <tbody>
