--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,3 +21,15 @@
         </main>
     </div>
 </div>
+
+
+
+<!-- 
+    Make sure you are using Node 12.20.0 or later
+
+    npm install
+
+    ng serve
+
+    ng test
+ -->
